--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
   "require": {
     "php": ">=5.3.3",
     "psr/log": "~1.0",
-    "symfony/process": "~2.7"
+    "monolog/monolog": "~1.13",
+    "symfony/yaml": "~2.7",
+    "symfony/process": "~2.7",
+    "symfony/options-resolver": "~2.7"
   },
   "require-dev": {
     "phpunit/phpunit": "4.6.*"
